--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "cli-spinner": "^0.2.7",
     "colors": "^1.1.2",
     "commander": "^2.13.0",
-    "prompt": "^1.0.0",
-    "shelljs": "^0.8.1"
+    "prompt": "^1.0.0"
   }
 }
